--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@ body {
   background-color: #13182a;
 }
 
-.center-screen {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	min-height: 100vh;
-  }
+div {
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+}
